[package]
name = "camera-intrinsic-model"
version = "0.3.1"
edition = "2024"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
description = "Camera Intrinsic Models"
homepage = "https://github.com/powei-lin/camera-intrinsic-model-rs"
repository = "https://github.com/powei-lin/camera-intrinsic-model-rs"
keywords = ["camera-intrinsic", "intrinsic", "fisheye"]
categories = ["data-structures", "science", "mathematics", "science::robotics"]
exclude = ["/.github/*", "*.ipynb", "./scripts/*", "examples/*", "tests/*", "data/*"]

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["rayon"] }
nalgebra = "0.33.2"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "remap"

[[example]]
name = "stereo_rectify"

[dev-dependencies]
imageproc = "0.25.0"
rand = "0.9.0"
